--- a/index.html
+++ b/index.html
@@ -108,13 +108,15 @@
 
   <header class="main-header">
     <div class="container">
-      <div class="header-inner">
+      <div class="header-inner header-inner--landing">
         <div class="brand">
-          <img src="./assets/img/logo.png" alt="شعار الحملة" width="220">
+          <a href="#home" aria-label="العودة إلى بداية الصفحة">
+            <img src="./assets/img/logo.png" alt="شعار الحملة" width="220">
+          </a>
         </div>
 
-        <!-- One-page navigation only -->
-        <nav aria-label="أقسام الصفحة" class="landing-nav">
+        <!-- Desktop nav -->
+        <nav aria-label="أقسام الصفحة" class="landing-nav landing-nav--desktop">
           <ul class="nav-links">
             <li><a href="#home" class="active">الرئيسية</a></li>
             <li><a href="#message">الرسالة</a></li>
@@ -125,15 +127,57 @@
           </ul>
         </nav>
 
-        <div class="nav-actions">
-          <!-- Share Now = Copy Link -->
+        <div class="nav-actions nav-actions--desktop">
           <button class="btn btn-primary landing-share-btn" type="button" id="copyLinkBtn">
             شارك الآن
           </button>
         </div>
+
+        <!-- Mobile controls -->
+        <div class="nav-actions nav-actions--mobile">
+          <button class="btn btn-primary landing-share-btn" type="button" id="copyLinkBtnMobile">
+            شارك الآن
+          </button>
+
+          <button class="nav-toggle" type="button" id="navToggle" aria-label="فتح القائمة" aria-controls="mobileMenu"
+            aria-expanded="false">
+            <span class="nav-toggle__bars" aria-hidden="true"></span>
+          </button>
+        </div>
       </div>
     </div>
+
+    <!-- Mobile menu overlay -->
+    <div class="mobile-menu" id="mobileMenu" aria-hidden="true">
+      <div class="mobile-menu__backdrop" data-close="true"></div>
+
+      <aside class="mobile-menu__panel" role="dialog" aria-modal="true" aria-label="قائمة التنقل">
+        <div class="mobile-menu__header">
+          <img src="./assets/img/logo.png" alt="شعار الحملة" width="170">
+          <button class="mobile-menu__close" type="button" data-close="true" aria-label="إغلاق القائمة">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+
+        <nav class="mobile-menu__nav" aria-label="أقسام الصفحة (موبايل)">
+          <a href="#home" class="mobile-menu__link">الرئيسية</a>
+          <a href="#message" class="mobile-menu__link">الرسالة</a>
+          <a href="#paths" class="mobile-menu__link">المسارات</a>
+          <a href="#timeline" class="mobile-menu__link">الخطة</a>
+          <a href="#audience" class="mobile-menu__link">الفئات</a>
+          <a href="#media" class="mobile-menu__link">مركز الإعلام</a>
+        </nav>
+
+        <div class="mobile-menu__footer">
+          <button class="btn btn-primary w-100" type="button" id="copyLinkBtnMobile2">
+            نسخ رابط الصفحة
+          </button>
+          <p class="mobile-menu__hint">انسخ الرابط وشاركه على واتساب أو فيسبوك أو تويتر.</p>
+        </div>
+      </aside>
+    </div>
   </header>
+
 
   <main id="main-content">
     <section class="hero" id="home">
@@ -505,6 +549,78 @@
       setActive();
     })();
   </script>
+  <script defer>
+    (() => {
+      const menu = document.getElementById('mobileMenu');
+      const toggle = document.getElementById('navToggle');
+      const closeTargets = menu?.querySelectorAll('[data-close="true"]') || [];
+      const menuLinks = menu?.querySelectorAll('a[href^="#"]') || [];
+
+      const setExpanded = (isOpen) => {
+        toggle?.setAttribute('aria-expanded', String(isOpen));
+        menu?.setAttribute('aria-hidden', String(!isOpen));
+        document.body.classList.toggle('is-menu-open', isOpen);
+        menu?.classList.toggle('is-open', isOpen);
+      };
+
+      const openMenu = () => setExpanded(true);
+      const closeMenu = () => setExpanded(false);
+
+      toggle?.addEventListener('click', () => {
+        const isOpen = menu?.classList.contains('is-open');
+        isOpen ? closeMenu() : openMenu();
+      });
+
+      closeTargets.forEach(el => el.addEventListener('click', closeMenu));
+      menuLinks.forEach(a => a.addEventListener('click', closeMenu));
+
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape' && menu?.classList.contains('is-open')) closeMenu();
+      });
+
+      // ===== Copy link buttons (desktop + mobile)
+      const copyButtons = [
+        document.getElementById('copyLinkBtn'),
+        document.getElementById('copyLinkBtnMobile'),
+        document.getElementById('copyLinkBtnMobile2'),
+      ].filter(Boolean);
+
+      const toastEl = document.getElementById('copy-toast');
+
+      const showToast = () => {
+        if (!toastEl || !window.bootstrap) return;
+        const t = bootstrap.Toast.getOrCreateInstance(toastEl, { delay: 1800 });
+        t.show();
+      };
+
+      const copyText = async (text) => {
+        try {
+          if (navigator.clipboard && window.isSecureContext) {
+            await navigator.clipboard.writeText(text);
+            return true;
+          }
+        } catch (_) { }
+        const ta = document.createElement('textarea');
+        ta.value = text;
+        ta.setAttribute('readonly', '');
+        ta.style.position = 'fixed';
+        ta.style.top = '-1000px';
+        ta.style.opacity = '0';
+        document.body.appendChild(ta);
+        ta.select();
+        const ok = document.execCommand('copy');
+        document.body.removeChild(ta);
+        return ok;
+      };
+
+      copyButtons.forEach(btn => btn.addEventListener('click', async () => {
+        const url = window.location.href.split('#')[0];
+        const ok = await copyText(url);
+        if (ok) showToast();
+      }));
+    })();
+  </script>
+
 </body>
 
 </html>
