Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -362,8 +362,7 @@
               <div class="timeline-note message" role="status" aria-live="polite">
                 <span class="timeline-note-icon"><i class="fas fa-clock"></i></span>
                 <div class="timeline-note-body">
-                  <p class="note-title">قريباً — خطة الشهر الأول</p>
-                  <p class="note-text">انتظرونا للحصول على تفاصيل المرحلة الأولى</p>
+                  <p class="note-title">قريباً ... انتظرونا في خطة الشهر الأول</p>
                 </div>
               </div>
             </article>
