Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -493,13 +493,13 @@
         <div class="contact-card">
           <span class="icon-badge contact-icon"><i class="fab fa-telegram-plane"></i></span>
           <h3>تلغرام</h3>
-          <p><a href="https://t.me/test" target="_blank" rel="noopener noreferrer">@test</a></p>
+          <p><a href="#" rel="noopener noreferrer"> freeprisoners@</a></p>
         </div>
 
         <div class="contact-card">
           <span class="icon-badge contact-icon"><i class="fas fa-phone-alt"></i></span>
           <h3>هاتف</h3>
-          <p><a href="tel:+1234567890">+1234567890</a></p>
+          <p><a href="tel:+970567782329">+970567782329</a></p>
         </div>
       </div>
     </div>
