Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <!-- Mobile controls -->
         <div class="nav-actions nav-actions--mobile">
           <a class="btn btn-primary landing-share-btn" href="#contact" id="contactBtnMobile">
-            تواصل معنا
+            <i class="fa-solid fa-headset"></i>
           </a>
 
           <button class="nav-toggle" type="button" id="navToggle" aria-label="فتح القائمة" aria-controls="mobileMenu"
