Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/all.min.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css?v=<?php echo filemtime('assets/css/style.css'); ?>" />
+
 
   <!-- =========================
        Structured Data (JSON-LD) (UPDATE URL + LOGO)
@@ -366,7 +367,7 @@
                 </div>
               </div>
             </article>
-            <article class="timeline-step backend-hidden" data-step="2">
+            <!-- <article class="timeline-step backend-hidden" data-step="2">
               <p class="timeline-label">كفى سادية وإجراماً</p>
             </article>
             <article class="timeline-step backend-hidden" data-step="3">
@@ -380,7 +381,7 @@
             </article>
             <article class="timeline-step backend-hidden" data-step="6">
               <p class="timeline-label">لن نخذل الأسرى</p>
-            </article>
+            </article> -->
           </div>
         </div>
       </div>
