Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
         <div class="contact-card">
           <span class="icon-badge contact-icon"><i class="fab fa-telegram-plane"></i></span>
           <h3 data-i18n="contact.card2.title">Telegram desk</h3>
-          <p><a href="#" rel="noopener noreferrer">freeprisoners@</a></p>
+          <a href="#" rel="noopener noreferrer"> freeprisoners@</a>
         </div>
 
         <div class="contact-card">
